--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "prot4_44977612",
+  "type":"module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev":"nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
